# serie

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.schema.json  deny.toml  flake.nix  rustfmt.toml
.github/workflows/: build.yml  deny.yml  gh-pages.yml  pinact.yml  release.yml
assets/: default-keybind.toml
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/configurations/: config-file-format.md  index.md
docs/src/faq/: index.md
docs/src/features/: index.md  screenshots.md  user-command.md
docs/src/getting-started/: basic-usage.md  command-line-options.md  compatibility.md  index.md  installation.md  requirements.md
docs/src/introduction/: index.md
docs/src/keybindings/: custom-keybindings.md  index.md
scripts/: generate_test_repo.sh
src/: app.rs  check.rs  color.rs  config.rs  event.rs  external.rs  git.rs  graph.rs  keybind.rs  lib.rs  macros.rs  main.rs  protocol.rs  view.rs  widget.rs
src/graph/: cache.rs  calc.rs  geometry.rs  image.rs  queue.rs
src/view/: create_tag.rs  delete_ref.rs  delete_tag.rs  detail.rs  help.rs  list.rs  refs.rs  user_command.rs  views.rs
src/widget/: commit_detail.rs  commit_list.rs  commit_user_command.rs  pending_overlay.rs  ref_list.rs
tests/: graph.rs  numeric_prefix.rs
