[package]
name = "serie"
version = "0.4.6"
description = "A rich git commit graph in your terminal, like magic"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/serie"
repository = "https://github.com/lusingander/serie"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.87.0"

exclude = ["/.github", "/img"]

[dependencies]
arboard = "3.6.0"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
console = "0.16.0"
fuzzy-matcher = "0.3.7"
fxhash = "0.2.1"
image = { version = "0.25.6", default-features = false, features = [
    "rayon",
    "png",
] }
laurier = "0.1.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
rayon = "1.11.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
smart-default = "0.7.1"
toml = "0.9.5"
tui-input = "0.14.0"
tui-tree-widget = "0.23.1"
umbra = "0.4.0"

[dev-dependencies]
dircpy = "0.3.19"
rstest = "0.26.1"
tempfile = "3.20.0"
text-to-png = "0.2.0"

[profile.release]
codegen-units = 1
lto = true
