[package]
name = "serie"
version = "0.5.5"
description = "A rich git commit graph in your terminal, like magic"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/serie"
repository = "https://github.com/lusingander/serie"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.87.0"

exclude = ["/.github", "/img"]

[dependencies]
ansi-to-tui = "7.0.0"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
fuzzy-matcher = "0.3.7"
image = { version = "0.25.9", default-features = false, features = [
    "rayon",
    "png",
] }
laurier = "0.2.0"
once_cell = "1.21.3"
ratatui = { version = "0.29.0", features = ["serde"] }
rayon = "1.11.0"
rustc-hash = "2.1.1"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
smart-default = "0.7.1"
toml = "0.9.8"
tui-input = "0.14.0"
tui-tree-widget = "0.23.1"
umbra = "0.4.0"

[dev-dependencies]
dircpy = "0.3.19"
rstest = "0.26.1"
tempfile = "3.23.0"
text-to-png = "0.2.0"

[profile.release]
codegen-units = 1
lto = true
