[package]
name = "serie"
version = "0.8.0"
description = "A rich git commit graph in your terminal, like magic"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/serie"
repository = "https://github.com/lusingander/serie"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.88.0"

exclude = ["/.github", "/img"]

[dependencies]
ansi-to-tui = "8.0.1"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
fuzzy-matcher = "0.3.7"
garde = { version = "0.22.1", features = ["derive", "regex"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
laurier = "0.3.0"
once_cell = "1.21.4"
ratatui = { version = "0.30.0", features = ["serde"] }
rustc-hash = "2.1.2"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
smart-default = "0.7.1"
toml = "1.1.2"
tui-input = "0.15.3"
tui-tree-widget = "0.24.0"
umbra = "0.4.0"

[dev-dependencies]
dircpy = "0.3.20"
rstest = "0.26.1"
tempfile = "3.27.0"
text-to-png = "0.3.0"

[profile.release]
codegen-units = 1
lto = true
